# rsso

./: .dev.vars.example  .gitignore  Cargo.toml  README.md  package.json  wrangler.toml
.cargo/: config.toml
crates/rsso-cli/: Cargo.toml
crates/rsso-cli/src/: main.rs
crates/rsso-cron/: Cargo.toml
crates/rsso-cron/src/: lib.rs
crates/rsso-discord/: Cargo.toml
crates/rsso-discord/src/: command.rs  interaction.rs  lib.rs  response.rs  verify.rs
crates/rsso-domain/: Cargo.toml
crates/rsso-domain/src/: elo.rs  ids.rs  lib.rs  match_id.rs  modes.rs  shuffle.rs  state.rs  stats.rs
crates/rsso-handlers/: Cargo.toml
crates/rsso-handlers/src/: lib.rs
crates/rsso-riot/: Cargo.toml
crates/rsso-riot/src/: account.rs  lib.rs  match_v5.rs  routing.rs
crates/rsso-storage/: Cargo.toml
crates/rsso-storage/src/: d1.rs  lib.rs  models.rs  repository.rs
crates/rsso-worker/: Cargo.toml
crates/rsso-worker/src/: lib.rs
docs/: commands.md
migrations/: 0001_initial.sql  0002_views.sql  0003_match_indexes.sql
