[workspace]
resolver = "2"
members = [
  "crates/rsso-cli",
  "crates/rsso-cron",
  "crates/rsso-discord",
  "crates/rsso-domain",
  "crates/rsso-handlers",
  "crates/rsso-riot",
  "crates/rsso-storage",
  "crates/rsso-worker",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.78"
authors = ["Aaron Pham <contact@aarnphm.xyz>"]

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
console_error_panic_hook = "0.1"
ed25519-dalek = "2.2"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
http = "1.3"
nanoid = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
thiserror = "2"
time = { version = "0.3", default-features = false, features = ["formatting", "macros", "parsing", "serde"] }
url = "2"
wasm-bindgen = "0.2"
worker = { version = "0.8.3", features = ["d1", "http"] }
worker-macros = { version = "0.8.3", features = ["http"] }

rsso-cron = { path = "crates/rsso-cron" }
rsso-discord = { path = "crates/rsso-discord" }
rsso-domain = { path = "crates/rsso-domain" }
rsso-handlers = { path = "crates/rsso-handlers" }
rsso-riot = { path = "crates/rsso-riot" }
rsso-storage = { path = "crates/rsso-storage" }

[profile.release]
opt-level = "z"
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"
