[package]
name = "rsso-cron"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
rsso-domain.workspace = true
rsso-storage.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
