[package]
name = "rsso-discord"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
hex.workspace = true
rsso-domain.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
ed25519-dalek.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serenity = { version = "0.12.5", default-features = false, features = ["interactions_endpoint"] }

[lints]
workspace = true
