[package]
name = "rsso-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait.workspace = true
console_error_panic_hook.workspace = true
getrandom.workspace = true
rsso-cron.workspace = true
rsso-discord.workspace = true
rsso-domain.workspace = true
rsso-handlers.workspace = true
rsso-riot.workspace = true
rsso-storage.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
worker.workspace = true
worker-macros.workspace = true

[lints]
workspace = true
